# pkg/api/openapi.yaml
@@ -206,6 +206,7 @@ components:
       - symbol
       - quantity
       - fee
+      - orderid
       - timestamp
       properties:
         type:
@@ -216,9 +217,10 @@ components:
           $ref: '#/components/schemas/CurrencyValue'
         fee:
           $ref: '#/components/schemas/CurrencyValue'
+        orderid:
+          type: string
         timestamp:
-          type: integer
-          format: int64
+          type: string
     BalanceList:
       type: array
       items:
